# roscpp_initializer

./: CMakeLists.txt  README.md  package.xml  setup.py
include/: roscpp_initializer.hpp
src/: roscpp_initializer.cpp
src/roscpp_initializer/: __init__.py
