<?xml version="1.0"?>
<package>
  <name>roscpp_initializer</name>
  <version>1.0.0</version>
  <description>
    Python bindings for roscpp
  </description>

  <license>TODO</license>
  <maintainer email="vinitha@cs.uw.edu">Vinitha Ranganeni</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
</package>
